[package]
name = "rhei-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6.12"
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1"

[dependencies.tokio]
version = "1.27.0"
features = ["full"]

[dependencies.tower-http]
version = "0.4.0"
features = ["fs", "cors"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
